--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "next": "15.0.4",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-big-calendar": "^1.16.3",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
@@ -35,9 +35,11 @@
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.16.0",
     "@types/react-dom": "^19",
-    "eslint": "^8",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.0.4",
+    "glob": "^11.0.0",
     "postcss": "^8",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
